added no-javascript fallback

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 	</div>
 	
 	<!-- Begin Navbar -->
-		<!--
+	<!--
 	<div class="text-center spunky-navbar">
 		<p class="barrett">
 			<b><button class="spunky-navbar-link" onclick="goTab('tab-Home')">Home</button>|<button class="spunky-navbar-link" onclick="goTab('tab-ChasingTail')">Chasing Tail</button>|<button class="spunky-navbar-link" onclick="goTab('tab-Rubberfur')">Rubberfur</button></b>
 		</p>
 	</div>
-		-->
+	-->
 	<!-- End Navbar -->
+
 	
 	<!-- Begin HOME Tab
 			Contains attract photos
@@ -34,9 +35,7 @@
 					<!--<button onclick="goPage(-1)" class="align-self-center"><img class="arrow d-none d-xxl-inline-block" src="assets/arrow-left.png"></button>-->
 					<img class="arrow d-none d-xxl-inline-block" src="assets/arrow-left.png?1" style="filter:opacity(0%)">
 				</div>
-				<div id="page-builder-container" class="col" style="padding-top: 32px;">
-
-				</div>
+				<div id="page-builder-container" class="col" style="padding-top: 32px;"> 		<div class="row"> 			<div class="col-xs-12 col-xl-6"> 			<a href="https://www.flickr.com/photos/195169182@N08/52827349662/in/datetaken/" title="Rigel Xiros" target="_blank" class="col photo-item"> 				<span class="photo-container"> 					<img src="assets/8x10p_frame.png?1" class="photo-border"> 					<img src="assets/blank_frame.png?1" class="photo-border-mask"> 					<img src="https://live.staticflickr.com/65535/52827987571_09796354fd.jpg" class="photo" width="307px" height="384"> 				</span> 			</a> 			</div> 			<div class="col-xs-12 col-xl-6"> 			<a href="https://www.flickr.com/photos/195169182@N08/52572587635/in/datetaken-public/" title="Fwanky" target="_blank" class="col photo-item"> 				<span class="photo-container"> 					<img src="assets/8x10p_frame.png?1" class="photo-border"> 					<img src="assets/blank_frame.png?1" class="photo-border-mask"> 					<img src="https://live.staticflickr.com/65535/52572587635_e0a2f26bc1.jpg" class="photo" width="307px" height="384"> 				</span> 			</a> 			</div> 		</div>  		<div class="row"> 			<div class="col-xs-12 col-xl-6"> 			<a href="https://www.flickr.com/photos/195169182@N08/52776929647/in/datetaken/" title="Caesar" target="_blank" class="col photo-item"> 				<span class="photo-container"> 					<img src="assets/8x10p_frame.png?1" class="photo-border"> 					<img src="assets/blank_frame.png?1" class="photo-border-mask"> 					<img src="https://live.staticflickr.com/65535/52828394525_cf0343a8db.jpg" class="photo" width="307px" height="384"> 				</span> 			</a> 			</div> 			<div class="col-xs-12 col-xl-6"> 			<a href="https://www.flickr.com/photos/195169182@N08/52852330104/in/datetaken/" title="Lekida" target="_blank" class="col photo-item"> 				<span class="photo-container"> 					<img src="assets/35P_frame.png?1" class="photo-border"> 					<img src="assets/blank_frame.png?1" class="photo-border-mask"> 					<img src="https://live.staticflickr.com/65535/52852330104_55b57c1a21.jpg" class="photo" width="257px" height="384"> 				</span> 			</a> 			</div> 		</div> </div>
 				<div class="col-2 d-flex justify-content-end">
 					<img class="arrow d-none d-xxl-inline-block" src="assets/arrow-right.png?1" style="filter:opacity(0%)">
 					<!--<button onclick="goPage(1)" class="align-self-center"><img class="arrow d-none d-xxl-inline-block" src="assets/arrow-right.png"></button>-->
@@ -46,7 +45,37 @@
 	</div>
 	<!-- End HOME Tab -->
 	
-
+	<!-- Begin Chasing Tail Tab
+			Contains information about Chasing Tail Magazine
+	-->
+	<!--
+	<div id="tab-ChasingTail" class="tab" style="display:none;">
+		<div class="text-center">
+			<div class="row">
+				<p class="barrett">
+					CT Tab
+				</p>
+			</div>
+		</div>
+	</div>
+	-->
+	<!-- End Chasing Tail Tab -->
+	
+	<!-- Begin Rubberfur Tab
+			Contains information about Rubberfur
+	-->
+	<!--
+	<div id="tab-Rubberfur" class="tab" style="display:none;">
+		<div class="text-center">
+			<div class="row">
+				<p class="barrett">
+					Rubberfur Tab
+				</p>
+			</div>
+		</div>
+	</div>
+	-->
+	<!-- End Rubberfur Tab -->
 
 	<div class="text-center" style="margin-bottom: 32px;">
 		<div class="row">
@@ -165,57 +194,7 @@ pages=
 			"x": "257",
 			"y": "384"
 		}
-	],
-	[
-		{
-			"imageUrl":"https://live.staticflickr.com/65535/52387741805_187d975a19_c.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387741805/in/datetaken-public/",
-			"altText":"Gali",
-			"format":"645P",
-			"size":"half",
-			"x":"280",
-			"y":"384"
-		},
-		{
-			"imageUrl":"https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387616644/in/datetaken/",
-			"altText":"Kipper",
-			"format":"645L",
-			"size":"half",
-			"x": "384",
-			"y": "280"
-		},
-		{
-			"imageUrl":"https://live.staticflickr.com/65535/52225439312_3e70816f8b.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52225439312/in/datetaken/",
-			"altText":"AC 2022",
-			"format":"120",
-			"size":"half",
-			"x": "389",
-			"y": "384"
-		},
-		{
-			"imageUrl":"https://live.staticflickr.com/65535/52671545425_c109a04ea8.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52628049604/in/datetaken/",
-			"altText":"Symphony",
-			"format":"8x10p",
-			"size":"half",
-			"x": "307",
-			"y": "384"
-		}
-	]/*,
-	[
-		{
-			"imageUrl":"https://live.staticflickr.com/65535/52387549633_cc92f4d124_h.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387549633/in/datetaken/",
-			"altText":"Kipper",
-			"format":"645P_large",
-			"size":"full",
-			"x":"846",
-			"y":"1155"
-		}
-	]*/
-	// 
+	]
 ];
 
 
