--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<!-- <div class="container"> -->
 	<div style="max-width: 1440px; margin-left: auto; margin-right: auto;">
 	<div class="d-flex justify-content-center">
-
 		<div class="header row">
 			<div class="col">
 				<button onclick="goTab('tab-Home')">
@@ -51,11 +50,11 @@
 							</a>
 						</div>
 						<div class="col-6">
-							<a href="https://www.flickr.com/photos/195169182@N08/52572587635/in/datetaken-public/" title="Fwanky" target="_blank" class="col photo-item">
+							<a href="https://www.flickr.com/photos/195169182@N08/52935840214/in/datetaken/" title="Firra" target="_blank" class="col photo-item">
 								<span class="photo-container">
 									<img src="assets/frames/8x10p_frame.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/52572587635_e0a2f26bc1.jpg" class="photo" width="307px" height="384">
+									<img src="https://live.staticflickr.com/65535/52935840214_e446e87500.jpg" class="photo" width="307px" height="384">
 								</span>
 							</a>
 						</div>
@@ -96,11 +95,11 @@
 							</a>
 						</div>
 						<div class="col-12">
-							<a href="https://www.flickr.com/photos/195169182@N08/52572587635/in/datetaken-public/" title="Fwanky" target="_blank" class="col photo-item-mobile">
+							<a href="https://www.flickr.com/photos/195169182@N08/52935840214/in/datetaken/" title="Firra" target="_blank" class="col photo-item-mobile">
 								<span class="photo-container">
 									<img src="assets/frames/8x10p_frame_large.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame_large.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/52572587635_e0a2f26bc1.jpg" class="photo" width="400px" height="500">
+									<img src="https://live.staticflickr.com/65535/52935840214_e446e87500.jpg" class="photo" width="400px" height="500">
 								</span>
 							</a>
 						</div>
