fixed navigation borking

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ const homeTabName = "tab-Home";
 		thisURL = new URL(window.location.href);
 		thisURL.searchParams.set("target", shortTarget);
 		
-		window.history.pushState("id","id",thisURL);
+		// window.history.pushState("id","id",thisURL);
 	}
 <!-- End Tabbing system -->
 
