updated con list

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				<div class="col">
 					<div class="row" style="padding-top: 64px;">
 						<p class="scaling-tagline" style="font-size:40px;"><b>Give your character the photos they deserve.</b></p>
-						<p style="font-size:32px;"><b>Available Anthrocon and TFS 2023. Starting at $80.</b></p>
+						<p style="font-size:32px;"><b>Available TFS, ACFI, and MFF 2023. Starting at $80.</b></p>
 					</div>
 					<div class="row" style="padding-top: 64px;">
 						
