added flickr, updated marketing blurb

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						<div class="col-xl-5 col-lg-6 col-12">
 							<div class="cover-text" style="padding-bottom: 32px;">
 								<p style="font-size:32px;text-align:left;"><b>&emsp;Get colourful, expressive photos in your fursuit at your next con, all shot on film. You will receive no fewer than 5 print-quality photos.</b></p>
-								<p style="font-size:32px;text-align:left;"><b>&emsp;Please contact me about availability in the DFW and Ark-La-Tex areas!</b></p>
+								<p style="font-size:32px;text-align:left;"><b>&emsp;Please contact me about availability at conventions, or in the DFW and Ark-La-Tex areas!</b></p>
 								<p style="font-size:32px;text-align:left;"><b>&emsp;Drop me a line on Telegram - <a href="https://t.me/SpunkyH0rn" target="_blank">@SpunkyH0rn</a></b></p>
 							</div>
 						</div>
@@ -289,6 +289,17 @@
 							</div>
 						</div>
 						<!-- End FurAffinity -->
+						
+						<!-- Flickr -->
+						<div class="row">
+							<div class="col-5" style="text-align:left;">
+								Flickr
+							</div>
+							<div class="col-7" style="text-align:right;">
+								<a href="https://www.flickr.com/photos/195169182@N08/" target="_blank">Spunky Horn</a>
+							</div>
+						</div>
+						<!-- End Flickr -->
 						
 						<!-- Chasing Tail -->
 						<div class="row">
