updated contact page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Live Free or Die. -->
 <html><head>
-		<link rel="stylesheet" href="assets/style.css?4">
+		<link rel="stylesheet" href="assets/style.css?5">
 		<link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
 		<meta name="viewport">
 	</head>
@@ -257,6 +257,17 @@
 				<div class="col">
 					<div class="spunky-contact" style="width:500px;margin-left:auto;margin-right:auto;padding-left:24px;padding-right:24px;">
 						
+						<!-- Email -->
+						<div class="row">
+							<div class="col-2" style="text-align:left;">
+								Email
+							</div>
+							<div class="col-10" style="text-align:right;">
+								<u>spunkyh0rn@protonmail.com</u>
+							</div>
+						</div>
+						<!-- End Email -->
+
 						<!-- Telegram -->
 						<div class="row">
 							<div class="col-5" style="text-align:left;">
