--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 						<!-- Flickr -->
 						<div class="row">
 							<div class="col-5" style="text-align:left;">
-								Flickr
+								Flickr Gallery
 							</div>
 							<div class="col-7" style="text-align:right;">
 								<a href="https://www.flickr.com/photos/195169182@N08/" target="_blank">Spunky Horn</a>
