--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- Begin Navbar -->
 	<div class="text-center spunky-navbar">
 		<div class="barrett">
-			<b><button class="spunky-navbar-link" id="navbar-tab-Home" onclick="goTab('tab-Home')">Home</button>|<button class="spunky-navbar-link" id="navbar-tab-GetPhotos" onclick="goTab('tab-GetPhotos')">Get Photos</button>|<button class="spunky-navbar-link" id="navbar-tab-Contact" onclick="goTab('tab-Contact')">Contact</button></b>
+			<b><button class="spunky-navbar-link" id="navbar-tab-Home" onclick="goTab('tab-Home')">Home</button>|<button class="spunky-navbar-link" id="navbar-tab-GetPhotos" onclick="goTab('tab-GetPhotos')">Get Photos</button>|<button class="spunky-navbar-link" id="navbar-tab-About" onclick="goTab('tab-About')">About</button>|<button class="spunky-navbar-link" id="navbar-tab-Contact" onclick="goTab('tab-Contact')">Contact</button></b>
 		</div>
 	</div>
 	<!-- End Navbar -->
@@ -131,22 +131,6 @@
 	</div>
 	<!-- End HOME Tab -->
 	
-	<!-- Begin Chasing Tail Tab
-			Contains information about Chasing Tail Magazine
-	-->
-	<!--
-	<div id="tab-ChasingTail" class="tab" style="display:none;">
-		<div class="text-center">
-			<div class="row">
-				<p class="barrett">
-					CT Tab
-				</p>
-			</div>
-		</div>
-	</div>
-	-->
-	<!-- End Chasing Tail Tab -->
-	
 	<!-- Begin Hire Me Tab
 			Commission info
 	-->
@@ -156,7 +140,7 @@
 				<div class="col">
 					<div class="row" style="padding-top: 64px;">
 						<p class="scaling-tagline" style="font-size:40px;"><b>Give your character the photos they deserve.</b></p>
-						<p style="font-size:32px;"><b>Available TFS, ACFI, and MFF 2023. Starting at $80.</b></p>
+						<p style="font-size:32px;"><b>Available ACFI and MFF 2023. Starting at $80.</b></p>
 					</div>
 					<div class="row" style="padding-top: 64px;">
 						
@@ -247,6 +231,52 @@
 		</div>
 	</div>
 	<!-- End Hire Me Tab -->
+		
+		
+	<!-- Begin About Tab
+			Contains pontification
+	-->
+	<div id="tab-About" class="tab" style="display:none;">
+		<div class="text-center">
+			<div class="row" style="padding-top:64px;">
+						<!-- FIRST ROW -->
+						<!-- Large image for XL and mobile displays -->
+						<div class="col-12 d-lg-none d-flex">
+							<a class="col photo-item-mobile">
+								<span class="photo-container">
+									<img src="assets/frames/8x10p_frame_large.png?2" class="photo-border">
+									<img src="assets/frames/blank_frame_large.png?2" class="photo-border-mask">
+									<img src="https://live.staticflickr.com/65535/53082455097_e1d426326d.jpg" class="photo" width="400px" height="500">
+								</span>
+							</a>
+						</div>
+						<!-- End large image -->
+						<!-- Medium image for L displays -->
+						<div class="col-lg-2 d-none d-lg-flex">
+						</div>
+						<div class="col-lg-3 d-none d-lg-flex">
+							<a class="col photo-item">
+								<span class="photo-container">
+									<img src="assets/frames/8x10p_frame.png?2" class="photo-border">
+									<img src="assets/frames/blank_frame.png?2" class="photo-border-mask">
+									<img src="https://live.staticflickr.com/65535/53082455097_e1d426326d.jpg" class="photo" width="307px" height="384">
+								</span>
+							</a>
+						</div>
+						<!-- End medium image -->
+				
+						<!-- Text box -->
+						<div class="col-lg-7 col-12">
+							<div class="cover-text" style="padding-bottom: 32px;">
+								<p style="font-size:32px;text-align:left;">&emsp;Hi I'm Spunky H0rn And I Really Like Fog Filters And Bad Lenses I Hope you like ThiS PICTURE of ME It Was Taked By Casear Sneopard Leopard</p>
+							</div>
+						</div>
+						<!-- End text box -->
+						<!-- END FIRST ROW -->
+			</div>
+		</div>
+	</div>
+	<!-- End About Tab -->
 		
 	<!-- Begin Contact Tab
 			Contact information
