removed weird stuff

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- Begin Navbar -->
 	<div class="text-center spunky-navbar">
 		<div class="barrett">
-			<b><button class="spunky-navbar-link" id="navbar-tab-Home" onclick="goTab('tab-Home')">Home</button>|<button class="spunky-navbar-link" id="navbar-tab-GetPhotos" onclick="goTab('tab-GetPhotos')">Get Photos</button>|<button class="spunky-navbar-link" id="navbar-tab-About" onclick="goTab('tab-About')">About</button>|<button class="spunky-navbar-link" id="navbar-tab-Contact" onclick="goTab('tab-Contact')">Contact</button></b>
+			<b><button class="spunky-navbar-link" id="navbar-tab-Home" onclick="goTab('tab-Home')">Home</button>|<button class="spunky-navbar-link" id="navbar-tab-GetPhotos" onclick="goTab('tab-GetPhotos')">Get Photos</button>|<button class="spunky-navbar-link" id="navbar-tab-Contact" onclick="goTab('tab-Contact')">Contact</button></b>
 		</div>
 	</div>
 	<!-- End Navbar -->
@@ -232,52 +232,7 @@
 	</div>
 	<!-- End Hire Me Tab -->
 		
-		
-	<!-- Begin About Tab
-			Contains pontification
-	-->
-	<div id="tab-About" class="tab" style="display:none;">
-		<div class="text-center">
-			<div class="row" style="padding-top:64px;">
-						<!-- FIRST ROW -->
-						<!-- Large image for XL and mobile displays -->
-						<div class="col-12 d-lg-none d-flex">
-							<a class="col photo-item-mobile">
-								<span class="photo-container">
-									<img src="assets/frames/8x10p_frame_large.png?2" class="photo-border">
-									<img src="assets/frames/blank_frame_large.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/53082455097_e1d426326d.jpg" class="photo" width="400px" height="500">
-								</span>
-							</a>
-						</div>
-						<!-- End large image -->
-						<!-- Medium image for L displays -->
-						<div class="col-lg-2 d-none d-lg-flex">
-						</div>
-						<div class="col-lg-3 d-none d-lg-flex">
-							<a class="col photo-item">
-								<span class="photo-container">
-									<img src="assets/frames/8x10p_frame.png?2" class="photo-border">
-									<img src="assets/frames/blank_frame.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/53082455097_e1d426326d.jpg" class="photo" width="307px" height="384">
-								</span>
-							</a>
-						</div>
-						<!-- End medium image -->
-				
-						<!-- Text box -->
-						<div class="col-lg-7 col-12">
-							<div class="cover-text" style="padding-bottom: 32px;">
-								<p style="font-size:32px;text-align:left;">&emsp;Hi I'm Spunky H0rn And I Really Like Fog Filters And Bad Lenses I Hope you like ThiS PICTURE of ME It Was Taked By Casear Sneopard Leopard</p>
-							</div>
-						</div>
-						<!-- End text box -->
-						<!-- END FIRST ROW -->
-			</div>
-		</div>
-	</div>
-	<!-- End About Tab -->
-		
+
 	<!-- Begin Contact Tab
 			Contact information
 	-->
