removed placeholder text WHOOPS

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 											</div>
 											
 											<div class="col-12" style="text-align:left;">
-												&emsp;TODO: Fill me out
+												&emsp;Coming soon . . .
 											</div>
 										</div>
 										<hr>
