removed about page for now

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- Begin Navbar -->
 	<div class="text-center spunky-navbar">
 		<div class="barrett">
-			<b><button class="spunky-navbar-link" id="navbar-tab-Home" onclick="goTab('tab-Home')">Home</button>|<button class="spunky-navbar-link" id="navbar-tab-GetPhotos" onclick="goTab('tab-GetPhotos')">Get Photos</button>|<button class="spunky-navbar-link" id="navbar-tab-About" onclick="goTab('tab-About')">About</button>|<button class="spunky-navbar-link" id="navbar-tab-Contact" onclick="goTab('tab-Contact')">Contact</button></b>
+			<b><button class="spunky-navbar-link" id="navbar-tab-Home" onclick="goTab('tab-Home')">Home</button>|<button class="spunky-navbar-link" id="navbar-tab-GetPhotos" onclick="goTab('tab-GetPhotos')">Get Photos</button><!--|<button class="spunky-navbar-link" id="navbar-tab-About" onclick="goTab('tab-About')">About</button>-->|<button class="spunky-navbar-link" id="navbar-tab-Contact" onclick="goTab('tab-Contact')">Contact</button></b>
 		</div>
 	</div>
 	<!-- End Navbar -->
