fixed about page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- Begin Navbar -->
 	<div class="text-center spunky-navbar">
 		<div class="barrett">
-			<b><button class="spunky-navbar-link" id="navbar-tab-Home" onclick="goTab('tab-Home')">Home</button>|<button class="spunky-navbar-link" id="navbar-tab-GetPhotos" onclick="goTab('tab-GetPhotos')">Get Photos</button><!--|<button class="spunky-navbar-link" id="navbar-tab-About" onclick="goTab('tab-About')">About</button>-->|<button class="spunky-navbar-link" id="navbar-tab-Contact" onclick="goTab('tab-Contact')">Contact</button></b>
+			<b><button class="spunky-navbar-link" id="navbar-tab-Home" onclick="goTab('tab-Home')">Home</button>|<button class="spunky-navbar-link" id="navbar-tab-GetPhotos" onclick="goTab('tab-GetPhotos')">Get Photos</button>|<button class="spunky-navbar-link" id="navbar-tab-About" onclick="goTab('tab-About')">About</button>|<button class="spunky-navbar-link" id="navbar-tab-Contact" onclick="goTab('tab-Contact')">Contact</button></b>
 		</div>
 	</div>
 	<!-- End Navbar -->
@@ -195,7 +195,7 @@
 			<div class="row" style="padding-top:64px;">
 						<!-- FIRST ROW -->
 						<!-- Large image for XL and mobile displays -->
-						<div class="col-12 d-lg-none d-flex">
+						<div class="col-12 d-xl-none d-flex">
 							<a class="col photo-item-mobile">
 								<span class="photo-container">
 									<img src="assets/frames/35l_frame_large.png?2" class="photo-border">
@@ -206,20 +206,18 @@
 						</div>
 						<!-- End large image -->
 						<!-- Medium image for L displays -->
-						<div class="col-lg-2 d-none d-lg-flex">
-						</div>
-						<div class="col-lg-3 d-none d-lg-flex">
-							<a class="col photo-item">
+						<div class="col-xl-5 d-none d-xl-flex">
+							<a class="col photo-item-mobile">
 								<span class="photo-container">
-									<img src="assets/frames/35l_frame.png?2" class="photo-border">
-									<img src="assets/frames/blank_frame.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/53244208181_443334c899.jpg" class="photo" width="384" height="257px">
+									<img src="assets/frames/35l_frame_large.png?2" class="photo-border">
+									<img src="assets/frames/blank_frame_large.png?2" class="photo-border-mask">
+									<img src="https://live.staticflickr.com/65535/53244208181_443334c899.jpg" class="photo" width="500" height="334px">
 								</span>
 							</a>
 						</div>
 						<!-- End medium image -->
 						<!-- Text box -->
-						<div class="col-lg-7 col-12">
+						<div class="col-xl-7 col-12">
 							<div class="cover-text" style="padding-bottom: 32px;">
 								<p style="font-size:32px;text-align:left;">&emsp;I'm spunky_h0rn -- but you can just call me Spunky. I caught the photography bug the instant I went to my first convention and haven't looked back since. I strive for a fine look and feel to my photos, inspired by the style of portraits from decades past; I like to make fursuiters look soft, warm, and pretty, just like they are in person!</p>
 								<p style="font-size:32px;text-align:left;">&emsp;This photo of me was shot by my friend and colleague, Caesar Snep.<br>&emsp;Check out more of his work: <a href="https://www.flickr.com/photos/caesarsnep" target="_blank">https://www.flickr.com/photos/caesarsnep</a></p>
