changed in dreams status

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 											<div class="col-4" style="text-align:left;">
 											</div>
 											<div class="col-8" style="text-align:right;">
-												In Pre-Production, December 2024
+												In Production, December 2024
 											</div>
 										</div>
 									</div>
@@ -389,17 +389,6 @@
 							</div>
 						</div>
 						<!-- End Bsky -->
-						
-						<!-- Twitter -->
-						<div class="row">
-							<div class="col-5" style="text-align:left;">
-								Twitter
-							</div>
-							<div class="col-7" style="text-align:right;">
-								<a href="https://twitter.com/SpunkyH0rn" target="_blank">@SpunkyH0rn</a>
-							</div>
-						</div>
-						<!-- End Twitter -->
 						
 						<!-- FurAffinity -->
 						<div class="row">
