updated CT issue 1 release

--- a/index.html
+++ b/index.html
@@ -262,7 +262,14 @@
 												&emsp;Issue 1
 											</div>
 											<div class="col-8" style="text-align:right;">
-												In Production, December 2023
+												<b>Released November 2023</b>
+											</div>
+											
+											<div class="col-4" style="text-align:left;">
+												&emsp;Issue 2
+											</div>
+											<div class="col-8" style="text-align:right;">
+												In Pre-Production
 											</div>
 										</div>
 									</div>
