changed get photos image

--- a/index.html
+++ b/index.html
@@ -148,22 +148,22 @@
 						<!-- FIRST ROW -->
 						<!-- Large image for XL and mobile displays -->
 						<div class="col-xl-7 col-12 d-lg-none d-flex d-xl-flex">
-							<a href="https://www.flickr.com/photos/195169182@N08/53140382392/in/dateposted-public/" title="Speakearz" target="_blank" class="col photo-item-mobile">
+							<a href="https://www.flickr.com/photos/195169182@N08/53287701392/in/dateposted-public/" title="Hokkaido" target="_blank" class="col photo-item-mobile">
 								<span class="photo-container">
 									<img src="assets/frames/8x10p_frame_large.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame_large.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/53245267440_25bb4fff7c.jpg" class="photo" width="400px" height="500">
+									<img src="https://live.staticflickr.com/65535/53352124363_b2ab22b1bc_c.jpg" class="photo" width="400px" height="500">
 								</span>
 							</a>
 						</div>
 						<!-- End large image -->
 						<!-- Medium image for L displays -->
 						<div class="col-lg-6 d-none d-lg-flex d-xl-none">
-							<a href="https://www.flickr.com/photos/195169182@N08/53140382392/in/dateposted-public/ title="Speakearz" target="_blank" class="col photo-item">
+							<a href="https://www.flickr.com/photos/195169182@N08/53287701392/in/dateposted-public/" title="Hokkaido" target="_blank" class="col photo-item">
 								<span class="photo-container">
 									<img src="assets/frames/8x10p_frame.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/53245267440_25bb4fff7c.jpg" class="photo" width="307px" height="384">
+									<img src="https://live.staticflickr.com/65535/53352124363_b2ab22b1bc_c.jpg" class="photo" width="307px" height="384">
 								</span>
 							</a>
 						</div>
