--- a/index.html
+++ b/index.html
@@ -39,32 +39,33 @@
 				<div class="col d-none d-lg-block" style="padding-top: 32px;"> 	
 					<div class="row"> 				
 						<div class="col-6">
-							<a href="https://www.flickr.com/photos/195169182@N08/52977692318/in/datetaken/" title="Sterling Silvur" target="_blank" class="col photo-item">
+							<a href="https://www.flickr.com/photos/195169182@N08/53409371404/in/datetaken/" title="Firra" target="_blank" class="col photo-item">
 								<span class="photo-container">
 									<img src="assets/frames/8x10p_frame.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/52977692318_f393274e4d_c.jpg" class="photo" width="307px" height="384">
+									<img src="https://live.staticflickr.com/65535/53427633110_266fb75f8a.jpg" class="photo" width="307px" height="384">
 								</span>
 							</a>
 						</div>
-	
+					
 						<div class="col-6">
-							<a href="https://www.flickr.com/photos/195169182@N08/52976676327/in/datetaken/" title="Belsi" target="_blank" class="col photo-item">
+							<a href="https://www.flickr.com/photos/195169182@N08/53289053900/in/datetaken/" title="Hokkaido" target="_blank" class="col photo-item">
 								<span class="photo-container">
-									<img src="assets/frames/8x10l_frame.png?2" class="photo-border">
+									<img src="assets/frames/8x10p_frame.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/52976676327_ec3c3a13c1.jpg" class="photo" width="384px" height="307">
+									<img src="https://live.staticflickr.com/65535/53427363423_b15e1e2b13.jpg" class="photo" width="307px" height="384">
 								</span>
 							</a>
 						</div>
 					</div>
+
 					<div class="row">
 						<div class="col-6">
-							<a href="https://www.flickr.com/photos/195169182@N08/53154122624/in/dateposted-public/" title="Regret" target="_blank" class="col photo-item">
+							<a href="https://www.flickr.com/photos/195169182@N08/53206886530/in/datetaken/" title="Skylor" target="_blank" class="col photo-item">
 								<span class="photo-container">
 									<img src="assets/frames/35p_frame.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/53154122624_08f7c172d9.jpg" class="photo" width="257px" height="384">
+									<img src="https://live.staticflickr.com/65535/53206886530_7e087349af.jpg" class="photo" width="257px" height="384">
 								</span>
 							</a>
 						</div>
@@ -85,29 +86,29 @@
 				<div class="col d-block d-lg-none" style="padding-top: 32px;">
 					<div class="row">
 						<div class="col-12">
-							<a href="https://www.flickr.com/photos/195169182@N08/52977692318/in/datetaken/" title="Sterling Silvur" target="_blank" class="col photo-item-mobile">
+							<a href="https://www.flickr.com/photos/195169182@N08/53409371404/in/datetaken/" title="Firra" target="_blank" class="col photo-item-mobile">
 								<span class="photo-container">
 									<img src="assets/frames/8x10p_frame_large.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame_large.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/52977692318_f393274e4d_c.jpg" class="photo" width="400px" height="500">
+									<img src="https://live.staticflickr.com/65535/53427633110_266fb75f8a.jpg" class="photo" width="400px" height="500">
 								</span>
 							</a>
 						</div>
 						<div class="col-12">
-							<a href="https://www.flickr.com/photos/195169182@N08/52976676327/in/datetaken/" title="Belsi" target="_blank" class="col photo-item-mobile">
+							<a href="https://www.flickr.com/photos/195169182@N08/53289053900/in/datetaken/" title="Hokkaido" target="_blank" class="col photo-item-mobile">
 								<span class="photo-container">
-									<img src="assets/frames/8x10l_frame_large.png?2" class="photo-border">
+									<img src="assets/frames/8x10p_frame_large.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame_large.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/52976676327_ec3c3a13c1.jpg" class="photo" width="500px" height="400">
+									<img src="https://live.staticflickr.com/65535/53427363423_b15e1e2b13.jpg" class="photo" width="400px" height="500">
 								</span>
 							</a>
 						</div>
 						<div class="col-12">
-							<a href="https://www.flickr.com/photos/195169182@N08/53154122624/in/dateposted-public/" title="Regret" target="_blank" class="col photo-item-mobile">
+							<a href="https://www.flickr.com/photos/195169182@N08/53206886530/in/datetaken/" title="Skylor" target="_blank" class="col photo-item-mobile">
 								<span class="photo-container">
 									<img src="assets/frames/35p_frame_large.png?2" class="photo-border">
 									<img src="assets/frames/blank_frame_large.png?2" class="photo-border-mask">
-									<img src="https://live.staticflickr.com/65535/53154122624_08f7c172d9.jpg" class="photo" width="334px" height="500">
+									<img src="https://live.staticflickr.com/65535/53206886530_7e087349af.jpg" class="photo" width="333px" height="500">
 								</span>
 							</a>
 						</div>
@@ -141,7 +142,7 @@
 				<div class="col">
 					<div class="row" style="padding-top: 64px;">
 						<p class="scaling-tagline" style="font-size:40px;"><b>Give your character the photos they deserve.</b></p>
-						<p style="font-size:32px;">Available MFF 2023 and AnEx 2024. Starting at $80.</p>
+						<p style="font-size:32px;">Available at AnEx 2024 and TFF 2024. Starting at $80.</p>
 					</div>
 					<div class="row" style="padding-top: 64px;">
 						
