updated commission page

--- a/comision.html
+++ b/comision.html
@@ -54,14 +54,16 @@
 						<!-- Content -->
 
 <center>
-	<p>Give your character the photos they deserve.<br>Available at AnEx 2024 and TFF 2024. Starting at $80.</p>
+	Give your character the photos they deserve.<br>
+	Available at TFF 2024 and FWA 2024. Starting at $100.<br><br>
 	
 	<img src="./assets/photos/hkaido2.jpg">
 	
 	<div style="width:480px;">
-	<p>&emsp;Get colourful, expressive photos in your fursuit at your next con, all shot on film. You will receive no fewer than 5 print-quality photos.</p>
-	<p>&emsp;Please contact me about availability at conventions, or in the DFW and Ark-La-Tex areas!</p>
-	<p>&emsp;Drop me a line on Telegram - <a href="https://t.me/SpunkyH0rn" target="_blank">@SpunkyH0rn</a></p>
+	<br>
+	&emsp;Get colourful, expressive photos in your fursuit at your next con, all shot on film. You will receive no fewer than 5 print-quality photos and 3 8x10" photo prints.<br><br>
+	&emsp;Please contact me about availability at conventions, or in the DFW and Ark-La-Tex areas!<br><br>
+	&emsp;Drop me a line on Telegram - <a href="https://t.me/SpunkyH0rn" target="_blank">@SpunkyH0rn</a>
 	</div>
 </center>
 
