--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
 						<td>
 							<div class="navbar" style="max-width:700px;">
 								<center>
-									<a href="./about">About</a> • <a href="./projects">Projects</a> • <a href="./commissions">Commissions</a> • <a href="./gallery">Gallery</a> • <a href="./contact">Contact</a>
+									<a href="./about">About</a> • <a href="./projects">Projects</a> • <a href="./comision">Commissions</a> • <a href="./gallery">Gallery</a> • <a href="./contact">Contact</a>
 								</center>
 							</div>
 						</td>
