--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</td>
 		<td width="50%">
 			<center>
-			<a href="./commissions">
+			<a href="./comision">
 				<img src="./assets/photos/hokaido.jpg">
 				<br>
 				<br>
