--- a/comision.html
+++ b/comision.html
@@ -60,7 +60,7 @@
 	<br>
 	&emsp;Get colourful, expressive photos in your fursuit at your next con, all shot on film. Open to everything -- indoors, outdoors, group photos, partials, fullsuits, AD, and gear are all welcome. Prints available.<br><br>
 	&emsp;Please contact me about availability at conventions, or in the DFW and Ark-La-Tex areas!<br><br>
-	&emsp;Drop me a line on Telegram - <a href="https://t.me/SpunkyH0rn" target="_blank">@SpunkyH0rn</a><br>or, use this form, and I'll get back to you:
+	&emsp;Drop me a line on Telegram - <a href="https://t.me/SpunkyH0rn" target="_blank">@SpunkyH0rn</a><br>
 	
 	</div>
 	<div style="height:32px;"></div>
